# rust-vault

./: .gitignore  Cargo.toml
crates/tera_embed/: Cargo.toml
crates/tera_embed/src/: embed.rs  lib.rs  tide_tera_ext.rs
crates/tera_embed/src/embed/: dev.rs  release.rs
src/: crypto.rs  db.rs  main.rs  server.rs  statics.rs
src/crypto/: tests.rs
static/: style.css
templates/: base.html  hello.html  login.html  posts.html  write.html
testing/: foo
