[package]
name = "vault"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
bs58 = { version = "*", features = ["check"] }
structopt = "0.3"
sodiumoxide = "*"
comrak = "*"
sqlx = { version = "*", features = ["sqlite", "runtime-async-std-native-tls"] }

tide = "0.16"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }

tera = "1.12"
tide-tera = "0.2"
webbrowser = "*"
stop-token = "0.6"
futures = "0.3"
mime_guess = "*"

[dependencies.tera_embed]
path = "./crates/tera_embed"
features = ["tide-tera-ext"]

[workspace]
members = [
    "crates/tera_embed"
]